Item details modal - addes more  css

--- a/src/styles/sass/abstracts/_colors.scss
+++ b/src/styles/sass/abstracts/_colors.scss
@@ -40,6 +40,6 @@ $warning-dark-parts: #907b2f;
 $danger: #d17676;
 $darker-dark-parts: $forth-light;
 
-$medium: rgb(74, 74, 74);
+$grey-medium: rgb(74, 74, 74);
 
-$light: rgb(168, 168, 168);
+$grey-light: rgb(168, 168, 168);
