--- a/src/styles/sass/abstracts/_colors.scss
+++ b/src/styles/sass/abstracts/_colors.scss
@@ -21,13 +21,14 @@ $third-light: #c08285;
 $forth-light: #61270e;
 $fifth-light: #f1dac5;
 $sixth-light: #ffffff;
+$seventh-light: rgba(0, 0, 0, 0.5);
 
 //
 //           _._._. Shadow styles
 //
 $shadow-sharp-right: 0.2rem 0 0rem 0 rgba(0, 0, 0, 0.3);
 $shadow-sharp-right-down: 1.1rem 0.3rem 0rem 0 rgba(0, 0, 0, 0.3);
-$shadow-sharp-right-down-close: 0.3rem 0.3rem 0rem 0 rgba(0, 0, 0, 0.3);
+$shadow-sharp-right-down-close: 0.2rem 0.2rem 0rem 0 rgba(0, 0, 0, 0.3);
 //
 //       _._. Colors which depend on states - disabled, error, success etc.
 //
@@ -40,6 +41,6 @@ $warning-dark-parts: #907b2f;
 $danger: #d17676;
 $darker-dark-parts: $forth-light;
 
-$grey-medium: rgb(74, 74, 74);
+$grey-medium: #4a4a4a;
 
 $grey-light: rgb(168, 168, 168);
