--- a/src/styles/sass/components/_item-edit-or-create-view.scss
+++ b/src/styles/sass/components/_item-edit-or-create-view.scss
@@ -17,10 +17,6 @@
     display: grid;
     grid-template-rows: [r-0] 1fr [r-1] 1fr [r-2] 1fr [r-3] 1fr [r-4] 1fr [r-5] 1fr [r-6] 1fr [r-7];
     grid-template-columns: [c-0] 2fr [c-1] 1fr [c-2];
-
-    & * {
-      font-weight: typography.$font-weight-bold;
-    }
   }
   &__img {
     @include mixins.item-img;
@@ -57,35 +53,30 @@
   &__unit-of-measurment {
     @include mixins.needed-amount-unit-of-measurement;
   }
-  &__amount-current {
+  &__amount-current-and-expected {
     @include mixins.amounts-current-expected;
   }
-  &__amount-wanted {
-    @include mixins.amounts-current-expected;
-  }
-  &__slash-divider {
-    @include mixins.amounts-current-expected;
-  }
+
   //hook2--pieszczę - /\ & all other old scss files - remake all names into WHAT I DID EARLIER, S T A C K BEM names, like "so el_el--modifier_el"
 
   &__repeatability {
     grid-column: c-0/c-2;
     @include mixins.btn-with-border-radius("md");
-    margin: 1rem 0;
+    margin: 2rem 0;
+
+    background-color: colors.$secondary-light;
   }
   &__exp-date {
     &__title {
       grid-column: c-0/c-2;
       justify-self: center; //hook2 - why not justify everything in globals ND ADD "IMPORTANT" inside children? dangerous tactic?
-
-      // font-weight: typography.$font-weight-bold;
     }
     &__inputs {
       grid-column: c-0/c-2;
 
       display: grid;
       grid-auto-flow: column;
-      margin: 1rem 0;
+      margin: 2rem 0;
       //hook1 - HOW to quickly find out what elements will need a class, and which will only need smartly organized html? ashoudl alll have classes, since we can easily modify the grid position when we need a repositioning of design?
       &__date {
         justify-self: end;
@@ -101,6 +92,7 @@
       }
       &__btn-toggle-open {
         @include mixins.btn-with-border-radius("md");
+        background-color: colors.$succes;
       }
     }
     //hook2 - how to amke css names shorter. they make the code less readable
@@ -111,11 +103,11 @@
       height: 3.8rem;
 
       display: grid;
-      grid-template-columns: 1fr 6rem 6rem 5rem;
+      grid-template-columns: 8.5rem 6rem 6rem 1fr;
 
       &__title {
-        @include mixins.center-grid-self;
-        font-weight: typography.$font-weight-bold;
+        justify-self: start;
+        align-self: center;
       }
 
       &__amount {
@@ -132,31 +124,33 @@
       &__btn-add-shop {
         @include mixins.btn-with-border-radius("md");
         justify-self: end;
+        padding: 0rem 1.25rem;
 
+        font-size: typography.$font-size-lg;
         background-color: colors.$secondary-light;
       }
     }
     &__list-of-prices {
       grid-column: c-0/c-2;
-      margin: 1rem 0;
-      padding: 1rem 0 1rem 0;
+      margin: 2rem 0;
+      padding: 1.75rem 0.75rem;
 
       background-color: colors.$sixth-light;
       border-radius: 1rem;
       // box-shadow: colors.$shadow-sharp-right; //remake shadow to take only the x/y of shadow as parameters. rest should be static
 
       display: grid;
-      row-gap: 1rem;
+      row-gap: 1.5rem;
 
       &__item {
-        display: grid;
-        grid-auto-flow: column;
-
         justify-items: start;
         align-items: center;
 
+        display: grid;
+        grid-auto-flow: column;
+
         & * {
-          font-size: typography.$font-size-lg;
+          font-size: typography.$font-size-md;
         }
 
         &__shop-img {
@@ -168,8 +162,10 @@
           @include mixins.next-img-border-radius(1rem);
         }
         &__shop-name {
-          border-right: 0.3rem solid colors.$grey-light;
           padding: 0 2rem 0 0;
+          justify-self: start;
+
+          border-right: 0.3rem solid colors.$grey-light;
         }
         &__price-value {
           width: 100%;
