Item details modal - fixed date inputs styling

--- a/src/styles/sass/components/_modal.scss
+++ b/src/styles/sass/components/_modal.scss
@@ -36,7 +36,7 @@
 
       border-radius: 1.25rem;
       font-size: typography.$font-size-xl;
-      background-color: colors.$primary-light;
+      background-color: colors.$secondary-light;
     }
   }
 
