--- a/src/styles/sass/components/_item-edit-or-create-view.scss
+++ b/src/styles/sass/components/_item-edit-or-create-view.scss
@@ -84,7 +84,10 @@
       &__date {
         justify-self: end;
         padding: 0.5rem 0 0.5rem 1rem;
+        width: max-content;
+
         border-radius: 1rem 0 0 1rem;
+        background-color: colors.$sixth-light;
       }
       &__time {
         justify-self: start;
@@ -92,6 +95,7 @@
         width: max-content;
 
         border-radius: 0 1rem 1rem 0;
+        background-color: colors.$sixth-light;
       }
       &__btn-toggle-open {
         @include mixins.btn-with-border-radius("md");
