--- a/src/styles/sass/components/_item-edit-or-create-view.scss
+++ b/src/styles/sass/components/_item-edit-or-create-view.scss
@@ -84,7 +84,7 @@
       &__date {
         justify-self: end;
         padding: 0.5rem 0 0.5rem 1rem;
-        width: max-content;
+        width: 12rem;
 
         border-radius: 1rem 0 0 1rem;
         background-color: colors.$sixth-light;
@@ -92,7 +92,7 @@
       &__time {
         justify-self: start;
         padding: 0.5rem 0 0.5rem 1rem;
-        width: max-content;
+        width: 6rem;
 
         border-radius: 0 1rem 1rem 0;
         background-color: colors.$sixth-light;
