--- a/src/styles/sass/globals.scss
+++ b/src/styles/sass/globals.scss
@@ -35,6 +35,7 @@ html {
   font-family: typography.$font-family-primary;
   font-size: typography.$font-size-sm;
   font-weight: typography.$font-weight-bold;
+  color: colors.$grey-light;
 }
 
 li {
