--- a/src/styles/sass/layout/_navbar.scss
+++ b/src/styles/sass/layout/_navbar.scss
@@ -8,7 +8,7 @@
 
 .navbar {
   &__container {
-    padding: 2rem 5rem 2rem 5rem;
+    padding: 1rem 5rem 1rem 5rem;
     margin: 0 0 2rem 0;
 
     background-color: colors.$primary-light;
@@ -28,7 +28,7 @@
   }
   &__menu-item-container {
     padding: 1rem;
-    width: 10rem;
+    width: 8rem;
     aspect-ratio: 1/1.2;
 
     background-color: colors.$secondary-light;
@@ -41,8 +41,10 @@
     display: grid;
     grid-template-rows: [r-0] 1.5fr [r-1] 0.5fr [r-2];
     row-gap: 0.8rem;
+
     & div {
       display: grid;
+      @include mixins.center-grid-items;
     }
     &--disabled {
       background-color: colors.$primary-light;
