style: list of items is responsive now

--- a/src/styles/sass/abstracts/_mixins.scss
+++ b/src/styles/sass/abstracts/_mixins.scss
@@ -88,7 +88,7 @@
   align-self: start;
 
   color: colors.$seventh-light;
-  font-size: typography.$font-size-md;
+  font-size: typography.$font-size-sm;
   font-weight: typography.$font-weight-bold;
 }
 //       _._. Button specific
