--- a/src/styles/sass/components/_item-edit-or-create-view.scss
+++ b/src/styles/sass/components/_item-edit-or-create-view.scss
@@ -165,15 +165,18 @@
       row-gap: 1.5rem;
 
       overflow-y: scroll;
+      &__no-prices-text {
+        @include mixins.center-grid-items;
 
+        color: colors.$grey-light;
+        display: grid;
+      }
       &__item {
-        justify-items: start;
-        align-items: start;
-
         display: grid;
         grid-template-columns: max-content 1fr 0.6fr;
-
         grid-auto-rows: max-content;
+        justify-items: start;
+        align-items: start;
 
         & * {
           font-size: typography.$font-size-md;
