feature: confirming creation an item - sends form data to the DB

--- a/src/styles/sass/components/_item-edit-or-create-view.scss
+++ b/src/styles/sass/components/_item-edit-or-create-view.scss
@@ -38,8 +38,7 @@
     @include mixins.center-grid-items;
 
     border-radius: 1rem;
-
-    justify-items: center;
+    text-align: center;
   }
   &__amounts-container {
     @include mixins.item-amounts-container;
