feature: placeholders for the amounts while creating an item will dissapear after writing inside of their input field

--- a/src/styles/sass/abstracts/_mixins.scss
+++ b/src/styles/sass/abstracts/_mixins.scss
@@ -39,6 +39,9 @@
   display: grid;
 }
 //           _._._. Amounts container
+@mixin placeholder-amount-color {
+  color: colors.$seventh-light;
+}
 @mixin item-amounts-container {
   padding: 0 10% 0 10%;
 
@@ -52,6 +55,22 @@
   row-gap: 0.5rem;
   & div {
     display: grid;
+  }
+
+  ::placeholder {
+    @include placeholder-amount-color;
+  }
+  ::-webkit-input-placeholder {
+    @include placeholder-amount-color;
+  }
+  :-moz-placeholder {
+    @include placeholder-amount-color;
+  }
+  ::-moz-placeholder {
+    @include placeholder-amount-color;
+  }
+  :-ms-input-placeholder {
+    @include placeholder-amount-color;
   }
 }
 @mixin bg-color-conditional {
