style: change size of space between list of items and the components above it

--- a/src/styles/sass/pages/_landing-page.scss
+++ b/src/styles/sass/pages/_landing-page.scss
@@ -89,7 +89,7 @@
     }
   }
   &__list-of-items-container {
-    padding: 3.5rem;
+    padding: 0 3.5rem 0 3.5rem;
     height: 40dvh;
 
     overflow: hidden;
